# 27-cap2-multiplication

./: README.md  app.py  pyproject.toml
src/cap2/: MyLLM.py  crew.py  main.py
src/cap2/config/: agents.yaml  tasks.yaml
src/cap2/tools/: arrobatool.py  math_tool.py
